[package]
name = "roguespace"
authors = ["Curtis Wilson"]
version = "0.1.0"
edition = "2024"

[dependencies]
rltk = { version = "0.8.7", features = ["serde"] }
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = { version = "0.4.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }